src/tui/snapshots/control_acceso__tui__visual_tests__CambioPassword_100x30_Negro.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                                    
 BRISAS CLI                                                               Operador de prueba · ROOT 
 CONTROL DE ACCESO                                                                            ··:·· 
          1 Nuevo  2 Activos  3 Hist.  4 Contr.  5 Emp.  6 Usr.  7 Aud.  8 Resp.  9 Clave           
 ────────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                    
                          CONTRASEÑA ACTUAL                                                         
                                                                                                    
                          ────────────────────────────────────────────────                          
                                                                                                    
                          CONTRASEÑA NUEVA                                                          
                                                                                                    
                          ────────────────────────────────────────────────                          
                                                                                                    
                          CONFIRMAR CONTRASEÑA NUEVA                                                
                                                                                                    
                          ────────────────────────────────────────────────                          
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 Confirme su identidad antes de cambiar la contraseña                                               
 TAB/↑↓ Cambiar campo  ENTER Guardar  ESC Volver  F2 Salida rápida  CTRL+←/→ Pestañas  F7 Tema      
                                                                                                    

=== estilos ===
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
" " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"BRISAS CLI" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
"                                                               " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"Operador de prueba · ROOT" fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
" " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
" " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"CONTROL DE ACCESO" fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"                                                                            " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"··:··" fg=Rgb(231, 198, 107) bg=Rgb(36, 36, 39) mod=NONE
" " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"1" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Nuevo" fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"2" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Activos" fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"3" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Hist." fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"4" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Contr." fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"5" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Emp." fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"6" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Usr." fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"7" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Aud." fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"8" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Resp." fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"9 Clave" fg=Rgb(36, 36, 39) bg=Rgb(232, 232, 235) mod=BOLD
"           " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
" " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"──────────────────────────────────────────────────────────────────────────────────────────────────" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"CONTRASEÑA ACTUAL                               " fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=BOLD
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"────────────────────────────────────────────────" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"CONTRASEÑA NUEVA                                " fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"────────────────────────────────────────────────" fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"CONFIRMAR CONTRASEÑA NUEVA                      " fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"────────────────────────────────────────────────" fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
"                          " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
" " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"Confirme su identidad antes de cambiar la contraseña                                              " fg=Rgb(148, 148, 158) bg=Rgb(36, 36, 39) mod=NONE
" " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
" " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"TAB/↑↓" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Cambiar campo  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"ENTER" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Guardar  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"ESC" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Volver  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"F2" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Salida rápida  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"CTRL+←/→" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Pestañas  " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"F7" fg=Rgb(184, 177, 255) bg=Rgb(36, 36, 39) mod=BOLD
" Tema      " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
"                                                                                                    " fg=Rgb(232, 232, 235) bg=Rgb(36, 36, 39) mod=NONE
